# qtlogrelay

./: .gitignore  README.md  pyproject.toml
example/: basic.py
qtlogrelay/: __init__.py  _qtlogrelay.py
